--- a/frontend/src/components/Header/style.css
+++ b/frontend/src/components/Header/style.css
@@ -1,19 +1,21 @@
 header {
-    background: #ffffff;
+    /* background: #ffffff; */
+    padding: 24px;
+    background: colorBgContainer;
     height: 150px;
-    display: flex;
+    display: flexbox;
     align-items: center;
     justify-content: center;
 }
 
 .logo-container {
     display: flex;
-    flex-direction: inherit;
+    flex-direction: column;
     align-items: center;
 }
 
 .logo-container img {
-    width: 300px;
+    width: 235px;
 }
 
 .logo-container p {
