--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,8 +9,7 @@
 
 body,
 html {
-  background-color: #ffffff;
-  /* background-color: #001529; */
+  background-color: colorBgContainer;
   color: #000000;
 }
 
